--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <body>
         <header>
             <nav>
+                <input type="checkbox" id="menu-checkbox">
+                <label for="menu-checkbox" id="menu-icon" class="hamburger-icon"><i class="fa-solid fa-bars"></i></label>
                 <ul class="nav-links">
                     <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
                     <li><a href="mens-jackets.html">Men's</a></li>
