--- a/product.html
+++ b/product.html
@@ -16,9 +16,11 @@
 <body>
     <header>
         <nav>
+            <input type="checkbox" id="menu-checkbox">
+            <label for="menu-checkbox" id="menu-icon" class="hamburger-icon"><i class="fa-solid fa-bars"></i></label>
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
-                <li><a href="mens.html">Men's</a></li>
+                <li><a href="mens-jackets.html">Men's</a></li>
                 <li><a href="womens.html">Women's</a></li>
                 <li><a href="sale.html">Sale</a></li>
                 <li><a href="about-us.html">About Us</a></li>
