footer, navigation, images
worked on the footer for both mobile and desktop. the same with the navigation. also added the compressed images and some color options on the product site.

--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     </head>
     <body>
         <header>
-            <nav>
+            <nav class="nav__content">
                 <input type="checkbox" id="menu-checkbox">
                 <label for="menu-checkbox" id="menu-icon" class="hamburger-icon"><i class="fa-solid fa-bars"></i></label>
                 <ul class="nav-links">
-                    <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
-                    <li><a href="mens-jackets.html">Men's</a></li>
-                    <li><a href="womens.html">Women's</a></li>
-                    <li><a href="sale.html">Sale</a></li>
-                    <li><a href="about-us.html">About Us</a></li>
+                        <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
+                        <li><a href="mens-jackets.html">Men's</a></li>
+                        <li><a href="womens.html">Women's</a></li>
+                        <li><a href="sale.html">Sale</a></li>
+                        <li><a href="about-us.html">About Us</a></li>
                 </ul>
                 <section class="nav-icons">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                    <i class="fa-solid fa-user"></i>
-                    <i class="fa-solid fa-heart"></i>
-                    <i class="fa-solid fa-cart-shopping"></i>
+                        <i class="fa-solid fa-magnifying-glass"></i>
+                        <i class="fa-solid fa-user"></i>
+                        <i class="fa-solid fa-heart"></i>
+                        <i class="fa-solid fa-cart-shopping"></i>
                 </section>
             </nav>
         </header>
@@ -44,48 +44,66 @@
                 <a href="mens-jackets.html" class="button-homepage-big">Shop Men's</a>
                 <a href="womens.html" class="button-homepage-big">Shop Women's</a>
             </section>
-            <section>
-                <h2 class="inspo-text image-2">Explore the outdoors with Rainydays</h2>
-                <a href="mens-jackets.html" class="button-homepage-small"> Shop Men's Jackets</a>
-                <a href="womens.html" class="button-homepage-small"> Shop Women's Jackets</a>
-                <h2 class="inspo-text image-3">Quality products that will last for years</h2>
-                <a href="mens.html" class="button-homepage-small"> Shop Top Sellers</a>
+            <section class="inspiration-content">
+                <div>
+                    <h2 class="inspo-text image-2">Explore the outdoors with Rainydays</h2>
+                    <a href="mens-jackets.html" class="button-homepage-small"> Shop Men's Jackets</a>
+                    <a href="womens.html" class="button-homepage-small"> Shop Women's Jackets</a>
+                </div>
+                <div>
+                    <h2 class="inspo-text image-3">Quality products that will last for years</h2>
+                    <a href="mens.html" class="button-homepage-small"> Shop Top Sellers</a>
+                </div>
+                
             </section>
         </main>
         <footer>
-            <section>
-                <h3>Shop</h3>
-                <ul>
-                    <li>Men</li>
-                    <li>Women</li>
-                    <li>Sale</li>
-                    <li>Gift Card</li>
-                </ul>
-                <h3>My account</h3>
-                <ul>
-                    <li>Log in/Sign up</li>
-                    <li>Order Status</li>
-                </ul>
-                <h3>Help</h3>
-                <ul>
-                    <li>FAQ</li>
-                    <li>Shipping and Delivery</li>
-                    <li>Return Policies</li>
-                    <li>Terms and Conditions</li>
-                    <li>Contact Us</li>
-                </ul>
-                <h3>About</h3>
-                <ul>
-                    <li>Rainydays</li>
-                    <li>Sustainability</li>
-                    <li>Our Stores</li>
-                    <li>Blog</li>
-                </ul>
-                <h3>Follow us</h3>
-                <i class="fa-brands fa-facebook-f"></i>
-                <i class="fa-brands fa-instagram"></i>
-                <i class="fa-brands fa-youtube"></i>
-                <i class="fa-brands fa-linkedin-in"></i>
+            <section class="footer__content">
+                <div>
+                    <img src="images/Logo-with-slogan.png" alt="Logo with Slogan" class="logo-with-slogan">
+                </div>
+                <div>
+                    <h3>Shop</h3>
+                    <ul>
+                        <li>Men</li>
+                        <li>Women</li>
+                        <li>Sale</li>
+                        <li>Gift Card</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>My account</h3>
+                    <ul>
+                        <li>Log in/Sign up</li>
+                        <li>Order Status</li>
+                    </ul>
+                </div>
+                <div>
+                    <h3>Help</h3>
+                        <ul>
+                            <li>FAQ</li>
+                            <li>Shipping and Delivery</li>
+                            <li>Return Policies</li>
+                            <li>Terms and Conditions</li>
+                            <li>Contact Us</li>
+                        </ul>
+                </div>
+                <div>
+                    <h3>About</h3>
+                        <ul>
+                            <li>Rainydays</li>
+                            <li>Sustainability</li>
+                            <li>Our Stores</li>
+                            <li>Blog</li>
+                        </ul>
+                </div>
+                <div>
+                    <h3>Follow us</h3>
+                        <i class="fa-brands fa-facebook-f"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                        <i class="fa-brands fa-linkedin-in"></i>
+                </div>
             </section>
             <p>&copy; 2025 Rainydays</p>
         </footer>
