--- a/mens-jackets.html
+++ b/mens-jackets.html
@@ -53,41 +53,56 @@
                         Endurance Softshell Jacket
                     </a>
                 </h2> 
-                <div class="circle-blue"></div>           
+                <div class="circle-blue"></div>
+                <div class="circle-green"></div>
+                <div class="circle-black"></div>             
                 <p>Color: blue, green, black</p>
                 <p>Price: $79</p>
             </div>
             <div class="product">
                 <img src="images/Jacket-2.jpg" alt="Black Windbreaker Jacket" class="product-image">
                 <h2 class="product-title">Scott Windbreaker 2.0</h2>
-                <div class="circle-blue"></div>  
+                <div class="circle-blue"></div>
+                <div class="circle-green"></div> 
+                <div class="circle-yellow"></div>  
+                <div class="circle-red"></div> 
                 <p>Color: blue, green, yellow, red</p>
                 <p>Price: $99</p>
             </div>
             <div class="product">
                 <img src="images/Jacket-3.jpg" alt="Black Jacket" class="product-image">
                 <h2 class="product-title">Scott Nordic Jacket</h2>
-                <div class="circle-blue"></div>  
+                <div class="circle-blue"></div> 
+                <div class="circle-green"></div> 
+                <div class="circle-orange"></div>  
                 <p>Color: blue, green, orange</p>
                 <p>Price: $129</p>
             </div>
             <div class="product">
                 <img src="images/Jacket-4.jpg" alt="Grey Softshell Jacket" class="product-image">
                 <h2 class="product-title">Scott Softshell Jacket</h2>
+                <div class="circle-red"></div>
+                <div class="circle-black"></div>
                 <p>Color: red, black</p>
                 <p>Price: $89</p>
             </div>
             <div class="product">
                 <img src="images/Jacket-5.jpg" alt="Green Fleece Jacket" class="product-image">
                 <h2 class="product-title">Fleece Jacket</h2>
-                <div class="circle-blue"></div>  
+                <div class="circle-blue"></div>
+                <div class="circle-yellow"></div>
+                <div class="circle-orange"></div>
+                <div class="circle-red"></div>
+                <div class="circle-black"></div>   
                 <p>Color: blue, yellow, orange, red, black</p>
                 <p>Price: $59</p>
             </div>
             <div class="product">
                 <img src="images/Jacket-6.jpg" alt="Grey Insulated Jacket" class="product-image">
                 <h2 class="product-title">Alpha Insulated Jacket</h2>
-                <div class="circle-blue"></div>  
+                <div class="circle-blue"></div>
+                <div class="circle-orange"></div> 
+                <div class="circle-black"></div> 
                 <p>Color: blue, orange, black</p>
                 <p>Price: $119</p>
             </div>
