Footer, colorchoice, product display

--- a/cart.html
+++ b/cart.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav__content">
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
             </ul>
@@ -49,6 +49,10 @@
             <h3>Don't miss out on these:</h3>
             <div>
                 <img src="images/Jacket-4.jpg" alt="Grey Softshell Jacket" class="product-image-small">
+                <div class="colorchoice-small">
+                    <div class="circle-red-small"></div>
+                    <div class="circle-black-small"></div>
+                </div>
                 <p>Color red, black</p>
                 <p>Scott Softshell Jacket</p>
                 <p>$89</p>
@@ -57,6 +61,12 @@
             </div>
             <div>
                 <img src="images/Jacket-2.jpg" alt="Black Windbreaker Jacket" class="product-image-small">
+                <div class="colorchoice-small">
+                    <div class="circle-blue-small"></div>
+                    <div class="circle-green-small"></div>
+                    <div class="circle-yellow-small"></div>
+                    <div class="circle-red-small"></div>
+                </div>
                 <p>Color blue, green, yellow, red</p>
                 <p>Scott Windbreaker 2.0</p>
                 <p>$99</p>
@@ -65,6 +75,13 @@
             </div>
             <div>
                 <img src="images/Jacket-5.jpg" alt="Green Fleece Jacket" class="product-image-small">
+                <div class="colorchoice-small">
+                    <div class="circle-blue-small"></div>
+                    <div class="circle-yellow-small"></div>
+                    <div class="circle-orange-small"></div>
+                    <div class="circle-red-small"></div>
+                    <div class="circle-black-small"></div>
+                </div>
                 <p>Color blue, yellow, orange, red, black</p>
                 <p>Fleece Jacket</p>
                 <p>$59</p>
@@ -74,39 +91,52 @@
         </section>
     </main>
     <footer>
-        <section>
-            <h3>Shop</h3>
-            <ul>
-                <li>Men</li>
-                <li>Women</li>
-                <li>Sale</li>
-                <li>Gift Card</li>
-            </ul>
-            <h3>My account</h3>
-            <ul>
-                <li>Log in/Sign up</li>
-                <li>Order Status</li>
-            </ul>
-            <h3>Help</h3>
-            <ul>
-                <li>FAQ</li>
-                <li>Shipping and Delivery</li>
-                <li>Return Policies</li>
-                <li>Terms and Conditions</li>
-                <li>Contact Us</li>
-            </ul>
-            <h3>About</h3>
-            <ul>
-                <li>Rainydays</li>
-                <li>Sustainability</li>
-                <li>Our Stores</li>
-                <li>Blog</li>
-            </ul>
-            <h3>Follow us</h3>
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-linkedin-in"></i>
+        <section class="footer__content">
+            <div>
+                <img src="images/Logo-with-slogan.png" alt="Logo with Slogan" class="logo-with-slogan">
+            </div>
+            <div>
+                <h3>Shop</h3>
+                <ul>
+                    <li>Men</li>
+                    <li>Women</li>
+                    <li>Sale</li>
+                    <li>Gift Card</li>
+                </ul>
+            </div>
+            <div>
+                <h3>My account</h3>
+                <ul>
+                    <li>Log in/Sign up</li>
+                    <li>Order Status</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Help</h3>
+                    <ul>
+                        <li>FAQ</li>
+                        <li>Shipping and Delivery</li>
+                        <li>Return Policies</li>
+                        <li>Terms and Conditions</li>
+                        <li>Contact Us</li>
+                    </ul>
+            </div>
+            <div>
+                <h3>About</h3>
+                    <ul>
+                        <li>Rainydays</li>
+                        <li>Sustainability</li>
+                        <li>Our Stores</li>
+                        <li>Blog</li>
+                    </ul>
+            </div>
+            <div>
+                <h3>Follow us</h3>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
+            </div>
         </section>
         <p>&copy; 2025 Rainydays</p>
     </footer>
