--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         </header>
         <main>
             <section class="welcome">
-                <h1 class="slogan">Pushing the Comfort Zone</h1>
+                <h1 class="slogan">Pushing the</h1>
+                <h1 class="slogan slogan-part-two">Comfort Zone</h1>
                 <a href="mens-jackets.html" class="button-homepage-big">Shop Men's</a>
                 <a href="womens.html" class="button-homepage-big">Shop Women's</a>
             </section>
