--- a/checkout.html
+++ b/checkout.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav__content">
             <ul class="nav-links">
                 <li><a href="index.html"><img src="images/Logo-witout-slogan.png" alt="Rainydays logo" class="logo-witout-slogan"></a></li>
             </ul>
@@ -83,39 +83,52 @@
         </section>
     </main>
     <footer>
-        <section>
-            <h3>Shop</h3>
-            <ul>
-                <li>Men</li>
-                <li>Women</li>
-                <li>Sale</li>
-                <li>Gift Card</li>
-            </ul>
-            <h3>My account</h3>
-            <ul>
-                <li>Log in/Sign up</li>
-                <li>Order Status</li>
-            </ul>
-            <h3>Help</h3>
-            <ul>
-                <li>FAQ</li>
-                <li>Shipping and Delivery</li>
-                <li>Return Policies</li>
-                <li>Terms and Conditions</li>
-                <li>Contact Us</li>
-            </ul>
-            <h3>About</h3>
-            <ul>
-                <li>Rainydays</li>
-                <li>Sustainability</li>
-                <li>Our Stores</li>
-                <li>Blog</li>
-            </ul>
-            <h3>Follow us</h3>
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-linkedin-in"></i>
+        <section class="footer__content">
+            <div>
+                <img src="images/Logo-with-slogan.png" alt="Logo with Slogan" class="logo-with-slogan">
+            </div>
+            <div>
+                <h3>Shop</h3>
+                <ul>
+                    <li>Men</li>
+                    <li>Women</li>
+                    <li>Sale</li>
+                    <li>Gift Card</li>
+                </ul>
+            </div>
+            <div>
+                <h3>My account</h3>
+                <ul>
+                    <li>Log in/Sign up</li>
+                    <li>Order Status</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Help</h3>
+                    <ul>
+                        <li>FAQ</li>
+                        <li>Shipping and Delivery</li>
+                        <li>Return Policies</li>
+                        <li>Terms and Conditions</li>
+                        <li>Contact Us</li>
+                    </ul>
+            </div>
+            <div>
+                <h3>About</h3>
+                    <ul>
+                        <li>Rainydays</li>
+                        <li>Sustainability</li>
+                        <li>Our Stores</li>
+                        <li>Blog</li>
+                    </ul>
+            </div>
+            <div>
+                <h3>Follow us</h3>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
+            </div>
         </section>
         <p>&copy; 2025 Rainydays</p>
     </footer>
