--- a/product.html
+++ b/product.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="nav__content">
             <input type="checkbox" id="menu-checkbox">
             <label for="menu-checkbox" id="menu-icon" class="hamburger-icon"><i class="fa-solid fa-bars"></i></label>
             <ul class="nav-links">
@@ -42,7 +42,14 @@
             <p>Back</p>
         </nav>
         <section>
+            <img src="images/Jacket-1.jpg" alt="Red Softshell Jacket">
             <h1>Endurance Softshell Jacket</h1>
+            <div class="colorchoice-big">
+                <div class="circle-red-big"></div>
+                <div class="circle-blue-big"></div>
+                <div class="circle-green-big"></div>
+                <div class="circle-black-big"></div>
+            </div>
             <p>Color: red, blue, green, black</p>
             <p>Size: S, M, L, XL, XXL</p>
             <p>Price: $79</p>
@@ -61,6 +68,10 @@
             <h3>You may also like:</h3>
             <div>
                 <img src="images/Jacket-4.jpg" alt="Grey Softshell Jacket" class="product-image-small">
+                <div class="colorchoice-small">
+                    <div class="circle-red-small"></div>
+                    <div class="circle-black-small"></div>
+                </div>
                 <p>Color red, black</p>
                 <p>Scott Softshell Jacket</p>
                 <p>$89</p>
@@ -69,6 +80,12 @@
             </div>
             <div>
                 <img src="images/Jacket-2.jpg" alt="Black Windbreaker Jacket" class="product-image-small">
+                <div class="colorchoice-small">
+                    <div class="circle-blue-small"></div>
+                    <div class="circle-green-small"></div>
+                    <div class="circle-yellow-small"></div>
+                    <div class="circle-red-small"></div>
+                </div>
                 <p>Color blue, green, yellow, red</p>
                 <p>Scott Windbreaker 2.0</p>
                 <p>$99</p>
@@ -77,6 +94,13 @@
             </div>
             <div>
                 <img src="images/Jacket-5.jpg" alt="Green Fleece Jacket" class="product-image-small">
+                <div class="colorchoice-small">
+                    <div class="circle-blue-small"></div>
+                    <div class="circle-yellow-small"></div>
+                    <div class="circle-orange-small"></div>
+                    <div class="circle-red-small"></div>
+                    <div class="circle-black-small"></div>
+                </div>
                 <p>Color blue, yellow, orange, red, black</p>
                 <p>Fleece Jacket</p>
                 <p>$59</p>
@@ -86,39 +110,52 @@
         </section>
     </main>
     <footer>
-        <section>
-            <h3>Shop</h3>
-            <ul>
-                <li>Men</li>
-                <li>Women</li>
-                <li>Sale</li>
-                <li>Gift Card</li>
-            </ul>
-            <h3>My account</h3>
-            <ul>
-                <li>Log in/Sign up</li>
-                <li>Order Status</li>
-            </ul>
-            <h3>Help</h3>
-            <ul>
-                <li>FAQ</li>
-                <li>Shipping and Delivery</li>
-                <li>Return Policies</li>
-                <li>Terms and Conditions</li>
-                <li>Contact Us</li>
-            </ul>
-            <h3>About</h3>
-            <ul>
-                <li>Rainydays</li>
-                <li>Sustainability</li>
-                <li>Our Stores</li>
-                <li>Blog</li>
-            </ul>
-            <h3>Follow us</h3>
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-youtube"></i>
-            <i class="fa-brands fa-linkedin-in"></i>
+        <section class="footer__content">
+            <div>
+                <img src="images/Logo-with-slogan.png" alt="Logo with Slogan" class="logo-with-slogan">
+            </div>
+            <div>
+                <h3>Shop</h3>
+                <ul>
+                    <li>Men</li>
+                    <li>Women</li>
+                    <li>Sale</li>
+                    <li>Gift Card</li>
+                </ul>
+            </div>
+            <div>
+                <h3>My account</h3>
+                <ul>
+                    <li>Log in/Sign up</li>
+                    <li>Order Status</li>
+                </ul>
+            </div>
+            <div>
+                <h3>Help</h3>
+                    <ul>
+                        <li>FAQ</li>
+                        <li>Shipping and Delivery</li>
+                        <li>Return Policies</li>
+                        <li>Terms and Conditions</li>
+                        <li>Contact Us</li>
+                    </ul>
+            </div>
+            <div>
+                <h3>About</h3>
+                    <ul>
+                        <li>Rainydays</li>
+                        <li>Sustainability</li>
+                        <li>Our Stores</li>
+                        <li>Blog</li>
+                    </ul>
+            </div>
+            <div>
+                <h3>Follow us</h3>
+                    <i class="fa-brands fa-facebook-f"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-youtube"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
+            </div>
         </section>
         <p>&copy; 2025 Rainydays</p>
     </footer>
