positioning, grid and flexbox

--- a/cart.html
+++ b/cart.html
@@ -27,27 +27,34 @@
             <p>Back</p>
         </nav>
         <h1>Cart</h1>
-        <section>
-            <div> 
-                <h2>Endurance Softshell Jacket</h2>
-                <p>Color: Red</p>
-                <p>Size: Large</p>
-                <p>$79</p>
-                <i class="fa-solid fa-trash"></i>
+        <section class="cart">
+            <div class="cart-items"> 
+                <div class="cart-image">
+                    <img src="images/Jacket-1.jpg" alt="Red Softshell Jacket" class="product-image-cart">
+                </div>
+                <div>
+                    <h2>Endurance Softshell Jacket</h2>
+                    <p>Color: Red</p>
+                    <p>Size: Large</p>
+                    <p>$79</p>
+                    <i class="fa-solid fa-trash"></i>
+                </div>
             </div>
-            <div>
+            <div class="order-summary">
                 <h2>Order Summary</h2>
                 <p>Subtotal: $79</p>
                 <p>Estimated shipping: $0</p>
                 <p>Estimated tax: $0</p>
                 <p>Total: $79</p>
             </div>
-            <a href="checkout.html" class="checkout-button">Checkout</a>
-            <p class="discount-code">Enter Discount Code</p>
+            <div>
+                <a href="checkout.html" class="checkout-button">Checkout</a>
+                <p class="discount-code">Enter Discount Code</p>
+            </div>
         </section>
         <section>
             <h3>Don't miss out on these:</h3>
-            <div>
+            <div class="extra-product__content">
                 <img src="images/Jacket-4.jpg" alt="Grey Softshell Jacket" class="product-image-small">
                 <div class="colorchoice-small">
                     <div class="circle-red-small"></div>
@@ -59,7 +66,7 @@
                 <i class="fa-solid fa-cart-shopping"></i>
                 <i class="fa-solid fa-heart"></i>
             </div>
-            <div>
+            <div class="extra-product__content">
                 <img src="images/Jacket-2.jpg" alt="Black Windbreaker Jacket" class="product-image-small">
                 <div class="colorchoice-small">
                     <div class="circle-blue-small"></div>
@@ -73,7 +80,7 @@
                 <i class="fa-solid fa-cart-shopping"></i>
                 <i class="fa-solid fa-heart"></i>
             </div>
-            <div>
+            <div class="extra-product__content">
                 <img src="images/Jacket-5.jpg" alt="Green Fleece Jacket" class="product-image-small">
                 <div class="colorchoice-small">
                     <div class="circle-blue-small"></div>
