--- a/mens-jackets.html
+++ b/mens-jackets.html
@@ -39,12 +39,12 @@
             <a href="mens-jackets.html" class="nav-breadcrumbs">Men's Jackets</a>
         </nav>
         <h1>Men's Jackets</h1>
-        <section>
-            <p>Brand</p>
-            <p>Color</p>
-            <p>Style</p>
-            <p>Size</p>
-            <p>Relevance</p>
+        <section class="sort-and-relevance">
+            <p class="sort">Brand</p>
+            <p class="sort">Color</p>
+            <p class="sort">Style</p>
+            <p class="sort">Size</p>
+            <p class="sort relevance">Relevance</p>
         </section>
         <section class="products__list">
             <div class="product">
@@ -119,7 +119,9 @@
                 <p>Price: $119</p>
             </div>
         </section>
-        <button class="see-more-button">See More</button>
+        <div class="see-more__button">
+            <button class="see-more-button">See More</button>
+        </div>
     </main>
     <footer>
         <section class="footer__content">
