--- a/product.html
+++ b/product.html
@@ -41,32 +41,38 @@
             <i class="fa-solid fa-arrow-left"></i>
             <p>Back</p>
         </nav>
-        <section>
-            <img src="images/Jacket-1.jpg" alt="Red Softshell Jacket">
-            <h1>Endurance Softshell Jacket</h1>
-            <div class="colorchoice-big">
-                <div class="circle-red-big"></div>
-                <div class="circle-blue-big"></div>
-                <div class="circle-green-big"></div>
-                <div class="circle-black-big"></div>
+        <section class="product-info">
+            <div class="product-info__image">
+                <img src="images/Jacket-1.jpg" alt="Red Softshell Jacket" class="product-info-image">
             </div>
-            <p>Color: red, blue, green, black</p>
-            <p>Size: S, M, L, XL, XXL</p>
-            <p>Price: $79</p>
-            <a href="cart.html" class="add-to-cart-button">Add to Cart</a>
-            <i class="fa-solid fa-heart"></i>
-            <h2>Description</h2>
-            <p>This softshell jacket will take your adventures to the next level. It's lightweight, water resistant and wind resistant.</p>
-            <h3>Water Resistant</h3>
-            <i class="fa-solid fa-droplet"></i>
-            <i class="fa-solid fa-umbrella"></i>
-            <h3>Wind Resistant</h3>
-            <i class="fa-solid fa-wind"></i>
-            <h4>Details</h4>
-        </section>
-        <section>
-            <h3>You may also like:</h3>
             <div>
+                <h1>Endurance Softshell Jacket</h1>
+                <div class="colorchoice-big">
+                    <div class="circle-red-big"></div>
+                    <div class="circle-blue-big"></div>
+                    <div class="circle-green-big"></div>
+                    <div class="circle-black-big"></div>
+                </div>
+                <p>Color: red, blue, green, black</p>
+                <p>Size: S, M, L, XL, XXL</p>
+                <p>Price: $79</p>
+                <a href="cart.html" class="add-to-cart-button">Add to Cart</a>
+                <i class="fa-solid fa-heart"></i>
+            </div>
+            <div>
+                <h2>Description</h2>
+                <p>This softshell jacket will take your adventures to the next level. It's lightweight, water resistant and wind resistant.</p>
+                <h3>Water Resistant</h3>
+                <i class="fa-solid fa-droplet"></i>
+                <i class="fa-solid fa-umbrella"></i>
+                <h3>Wind Resistant</h3>
+                <i class="fa-solid fa-wind"></i>
+                <h4>Details</h4>
+            </div>
+        </section>
+        <h3>You may also like:</h3>
+        <section class="extra-products">
+            <div class="extra-product__content">
                 <img src="images/Jacket-4.jpg" alt="Grey Softshell Jacket" class="product-image-small">
                 <div class="colorchoice-small">
                     <div class="circle-red-small"></div>
@@ -78,7 +84,7 @@
                 <i class="fa-solid fa-cart-shopping"></i>
                 <i class="fa-solid fa-heart"></i>
             </div>
-            <div>
+            <div class="extra-product__content">
                 <img src="images/Jacket-2.jpg" alt="Black Windbreaker Jacket" class="product-image-small">
                 <div class="colorchoice-small">
                     <div class="circle-blue-small"></div>
@@ -92,7 +98,7 @@
                 <i class="fa-solid fa-cart-shopping"></i>
                 <i class="fa-solid fa-heart"></i>
             </div>
-            <div>
+            <div class="extra-product__content">
                 <img src="images/Jacket-5.jpg" alt="Green Fleece Jacket" class="product-image-small">
                 <div class="colorchoice-small">
                     <div class="circle-blue-small"></div>
